Fix duplicate beans and CORS config